--- a/assets/language/ar.json
+++ b/assets/language/ar.json
@@ -1,5 +1,5 @@
 {
-  "home": "بيت",
+  "home": "الرئيسية",
   "cart": "عربة التسوق",
   "menu": "قائمة طعام",
   "favourite": "مفضل",
@@ -20,7 +20,7 @@
   "order_details": "تفاصيل الطلب",
   "search_items_here": "اكتب شيئًا واضغط على أدخل ...",
   "all_categories": "جميع الفئات",
-  "view_all": "",
+  "view_all": "مشاهدة الكل",
   "popular_item": "العناصر الشعبية",
   "banner": "لافتة",
   "set_menu": "قائمة الضبط",
@@ -95,7 +95,7 @@
   "subtotal": "نطاق فرعي",
   "delivery_fee": "رسوم التوصيل",
   "total_amount": "المبلغ الإجمالي",
-  "place_order": "مكان الامر",
+  "place_order": "استكمال الطلب",
   "no_data_available": "لا تتوافر بيانات",
   "order_placed_successfully": "وضع النظام بنجاح",
   "order_id": "رقم التعريف الخاص بالطلب",
@@ -114,7 +114,7 @@
   "address_line_01": "خط عنوان",
   "address_line_02": "23/كتلة ، القطاع 4",
   "label_us": "تسمية كما",
-  "other": "آحرون",
+  "other": "آخرون",
   "save_location": "حفظ الموقع",
   "contact_person_name": "اسم شخص الاتصال",
   "enter_contact_person_name": "أدخل اسم جهة الاتصال",
@@ -143,7 +143,7 @@
   "submit": "يُقدِّم",
   "thanks_for_your_order": "شكرا لطلبك",
   "it_will_helps_to_improve": "سوف يساعد على تحسين\nجودة الخدمة",
-  "back_home": "العودة إلى المنزل",
+  "back_home": "العودة إلى الصفحة الرئيسية",
   "update": "تحديث",
   "coupon_discount": "خصم القسيمة",
   "valid_until": "صالح حتى",
@@ -196,8 +196,8 @@
   "not_available_now": "غير متاح الآن",
   "available_will_be": "سيكون متاح",
   "additional_note": "مذكرة إضافية",
-  "terms_and_condition": "البنود و الظروف",
-  "help_and_support": "ساعد لدعم",
+  "terms_and_condition": "االشروط و الاحكام",
+  "help_and_support": "الدعم والمساعدة",
   "restaurant_address": "عنوان المطعم:",
   "call_now": "اتصل الان",
   "send_a_message": "ارسل رسالة",
@@ -216,7 +216,7 @@
   "update_in_cart": "تحديث في العربة",
   "updated_in_cart": "تم تحديثه في العربة",
   "delivery": "توصيل منزلي",
-  "take_away": "يبعد",
+  "take_away": "الاستلام من الفرع",
   "invalid_code_or": "رمز غير صالح أو فشل في الحصول على خصم",
   "one_or_more_product_unavailable": "منتج واحد أو أكثر في عربة التسوق الخاصة بك غير متوفر في هذا الوقت",
   "no_address_available": "لا عنوان متاح",
@@ -343,8 +343,8 @@
   "user_not_available": "المستخدم غير متوفر",
   "review_submitted_successfully": "المراجعة المقدمة بنجاح",
   "all": "الجميع",
-  "non_veg": "ليس الخضار",
-  "veg": "طريق",
+  "non_veg": "ليس نباتي",
+  "veg": "نباتي",
   "show_less": "تظهر أقل",
   "show_more": "أظهر المزيد",
   "dine_in": "تناول الطعام في",
@@ -374,7 +374,7 @@
   "transaction_history": "تاريخ المعاملة",
   "loyalty_points": "نقاط الولاء",
   "convert_to_currency": "تحويل العملة",
-  "wallet_amount": "كمية المحفظة",
+  "wallet_amount": "مبلغ المحفظة",
   "refer_and_earn": "الرجوع والكسب",
   "invite_your_friends": "دعوة أصدقائك وأعمالك",
   "they_register": "يسجلون",
@@ -619,14 +619,14 @@
   "available_promo": "الترويجي المتاح",
   "no_promo_available": "لا ترويجي متاح!",
   "add_cutlery": "إضافة أدوات المائدة",
-  "proceed_to_checkout": "الشروع في الخروج",
+  "proceed_to_checkout": "الشروع في الدفع",
   "your_cart_is_empty": "عربة التسوق فارغة!",
   "view": "منظر",
   "enter_coupon": "أدخل القسيمة",
   "today_specials": "العروض الخاصة اليوم",
-  "dish_discoveries": "اكتشافات الطبق",
+  "dish_discoveries": " اكتشف اطباقنا",
   "find_food_form_our_branches": " ",
-  "local_eats": "يأكل محلي",
+  "local_eats": "اكل شعبي",
   "all_foods": "جميع الأطعمة",
   "stock_out": "المخزن نفذ",
   "chefs_recommendation": "توصية الشيف",
@@ -638,7 +638,7 @@
   "good": "جيد",
   "excellent": "ممتاز",
   "upload_up_to_4_image": "قم بتحميل ما يصل إلى 4 صورة",
-  "flavorful_set": "مجموعة لذيذ",
+  "flavorful_set": "المجموعة المفضلة ",
   "estimated_arrival": "الوصول المتوقع",
   "action": "فعل",
   "dark": "مظلم",
@@ -693,6 +693,5 @@
   "exit" : "خروج",
   "conversation_list" : "قائمة المحادثات",
   "switch_branch_effect" : "سيؤثر تغيير الفروع على المنتجات والأسعار وتوافر المنتجات في ذلك الفرع المحدد. هل تريد المتابعة بتغيير الفرع؟"
-
 
 }
