--- a/assets/language/ar.json
+++ b/assets/language/ar.json
@@ -54,7 +54,7 @@
   "chinese": "صينى",
   "japanese": "اليابانية",
   "arabic": "عربي",
-  "save": "يحفظ",
+  "save": "حفظ",
   "make_your_choice_order": "اجعل اختيارك وطلبك",
   "select_delivery_location": "حدد موقع التسليم",
   "delivery_to_your_home": "التسليم إلى منزلك",
@@ -163,6 +163,8 @@
   "coupon_code_copied": "رمز القسيمة نسخت",
   "dark_theme": "موضوع مظلم",
   "payment_cancelled": "تم إلغاء الدفع",
+  "We’re Closed":"مغلق الان",
+  "We are pleased to serve you\n from 10:00 AM to 3:30 AM":"سعداء بخدمتكم من الساعة 10:00 صباحاً\n حتى 3:30 بعد منتصف الليل",
   "order_failed": "فشل الطلب",
   "PAYMENT": "دفع",
   "no_order_history": "لا يوجد تاريخ أمر",
@@ -626,7 +628,7 @@
   "today_specials": "العروض الخاصة اليوم",
   "dish_discoveries": " اكتشف اطباقنا",
   "find_food_form_our_branches": " ",
-  "local_eats": "اكل شعبي",
+  "local_eats": "مشهور لدينا",
   "all_foods": "جميع الأطعمة",
   "stock_out": "المخزن نفذ",
   "chefs_recommendation": "توصية الشيف",
