--- a/assets/language/en.json
+++ b/assets/language/en.json
@@ -227,6 +227,7 @@
   "no_delivery_man_data_found": "Delivery man location data not found",
   "delivery_option": "Delivery Option",
   "free": "Free",
+  "We are pleased to serve you\n from 10:00 AM to 3:30 AM":"We are pleased to serve you from 10:00 AM to 3:30 AM",
   "select_branch": "Select Branch",
   "out_of_coverage_for_this_branch": "This address is out of coverage \nfor this branch",
   "select_a_language": "Select a language",
@@ -239,6 +240,7 @@
   "enter_first_name": "Enter first name",
   "enter_last_name": "Enter last name",
   "guest": "Guest",
+  "We’re Closed":"We’re Closed",
   "login_as_a": "Login as a",
   "now_you_are_in_guest_mode": "Now you are in guest mode.\nPlease login to enjoy the more awesome features.",
   "guest_mode": "Guest Mode",
