--- a/assets/language/ar.json
+++ b/assets/language/ar.json
@@ -105,7 +105,7 @@
   "cancel_order": "الغاء الطلب",
   "reorder": "إعادة ترتيب",
   "details": "تفاصيل",
-  "track_order": "ترتيب المسار",
+  "track_order": " متابعة الطلب",
   "my_profile": "ملفي",
   "workplace": "مكان العمل",
   "add_new_address": "أضف عنوانًا جديدًا",
